broken styles mid fix

--- a/bidwhist-frontend/src/css/BiddingPanel.css
+++ b/bidwhist-frontend/src/css/BiddingPanel.css
@@ -1,33 +1,22 @@
-.bidding-overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  overflow: hidden; /* ensures blur and semi-transparent background don't spill */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2000;
-}
-
 .bidding-panel {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 1px solid darkgreen;
   border-radius: 25px;
-  box-shadow: 30px 30px 42px rgba(0, 0, 0, 0.12),
-    -30px -30px 42px rgba(0, 0, 0, 0.12);
-  background: rgba(255, 255, 255, 0.01);
-  backdrop-filter: blur(15px);
-  -webkit-backdrop-filter: blur(15px);
 }
 
 .short-box {
-  width: 30% !important;
+  width: 30%;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
 }
